add synchronous and asynchronous modules to packages

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = fullmetalcopy
-version = 0.0.2
+version = 0.0.3
 description = Functions for faster PostgreSQL bulk inserts by copying to sql table.
 author = Odos Matthews
 license = MIT
@@ -16,6 +16,8 @@ classifiers =
 [options]
 packages =
     fullmetalcopy
+    fullmetalcopy.synchronous
+    fullmetacopy.asynchronous
 install_requires =
     sqlalchemy
 python_requires = >=3.10
