--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ classifiers =
 packages =
     fullmetalcopy
     fullmetalcopy.synchronous
-    fullmetacopy.asynchronous
+    fullmetaclopy.asynchronous
 install_requires =
     sqlalchemy
 python_requires = >=3.10
